--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -152,6 +152,60 @@ Developer: Derek Sheldon</string>
             </objects>
             <point key="canvasLocation" x="-1278" y="-183"/>
         </scene>
+        <!--Promotion View Controller-->
+        <scene sceneID="Egg-7p-EVn">
+            <objects>
+                <viewController storyboardIdentifier="promotion" id="WPH-dD-DlL" customClass="PromotionViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OaJ-Eh-4CA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="PROMOTION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pex-rd-rxh">
+                                <rect key="frame" x="22" y="342.66666666666669" width="333" height="18"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-y1-K5U" customClass="Label" customModule="apphere" customModuleProvider="target">
+                                <rect key="frame" x="20" y="366.66666666666669" width="335" height="88.666666666666686"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="BUSINESS NAME">
+                                        <attributes>
+                                            <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <font key="NSFont" size="46" name="Arial-BoldMT"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="0.75" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="lineHeightMultiple">
+                                        <real key="value" value="0.75"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zqM-3Y-QR7" firstAttribute="trailing" secondItem="c2e-y1-K5U" secondAttribute="trailing" constant="20" id="e78-HQ-eBE"/>
+                            <constraint firstItem="pex-rd-rxh" firstAttribute="leading" secondItem="c2e-y1-K5U" secondAttribute="leading" constant="2" id="eF3-xx-dYB"/>
+                            <constraint firstItem="c2e-y1-K5U" firstAttribute="top" secondItem="pex-rd-rxh" secondAttribute="bottom" constant="6" id="hrf-9T-L9q"/>
+                            <constraint firstItem="c2e-y1-K5U" firstAttribute="centerY" secondItem="zqM-3Y-QR7" secondAttribute="centerY" id="mxC-pu-Ea8"/>
+                            <constraint firstItem="pex-rd-rxh" firstAttribute="trailing" secondItem="c2e-y1-K5U" secondAttribute="trailing" id="rdv-hq-v0U"/>
+                            <constraint firstItem="c2e-y1-K5U" firstAttribute="leading" secondItem="zqM-3Y-QR7" secondAttribute="leading" constant="20" id="rmC-RB-0XH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zqM-3Y-QR7"/>
+                    </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="c2e-y1-K5U" id="hj3-7A-31W"/>
+                        <outlet property="promotionLabel" destination="pex-rd-rxh" id="hMV-8w-U5Z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0VG-tc-Vo2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1279" y="511"/>
+        </scene>
         <!--Business List View Controller-->
         <scene sceneID="FYs-ts-ggw">
             <objects>
@@ -511,7 +565,7 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1198" y="-1632"/>
+            <point key="canvasLocation" x="1196" y="-1632"/>
         </scene>
     </scenes>
     <resources>
